# med-final-exam-anki

./: README.md  create_anki_csv.py  main.py  models.py  output.json  pyproject.toml  scrape.py  settings.py  utils.py
output/: orvosi_zv.csv
