[project]
name = "anki-zv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "requests>=2.32.5",
]

[dependency-groups]
dev = [
  "ruff>=0.15.2",
]

[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ISC", "RUF"]
ignore = ["B008"]
